templates/network/iptables/default_iptables
# Generated by xtables-save v1.8.2 on Wed Feb  5 16:10:14 2020
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.18.0.0/16 ! -o br-d1b132d8c6bd -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -o eth0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.2/32 -d 172.18.0.2/32 -p tcp -m tcp --dport 5984 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i br-d1b132d8c6bd -j RETURN
-A DOCKER -i docker0 -j RETURN
-A DOCKER ! -i br-d1b132d8c6bd -p tcp -m tcp --dport 2200 -j DNAT --to-destination 172.18.0.2:5984
-A DOCKER ! -i br-d1b132d8c6bd -p tcp -m tcp --dport 80 -j DNAT --to-destination 172.18.0.4:80
COMMIT
# Completed on Wed Feb  5 16:10:14 2020
# Generated by xtables-save v1.8.2 on Wed Feb  5 16:10:14 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o br-d1b132d8c6bd -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-d1b132d8c6bd -j DOCKER
-A FORWARD -i br-d1b132d8c6bd ! -o br-d1b132d8c6bd -j ACCEPT
-A FORWARD -i br-d1b132d8c6bd -o br-d1b132d8c6bd -j ACCEPT
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wlan0 -o eth0 -j ACCEPT
-A DOCKER -d 172.18.0.2/32 ! -i br-d1b132d8c6bd -o br-d1b132d8c6bd -p tcp -m tcp --dport 5984 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i br-d1b132d8c6bd -o br-d1b132d8c6bd -p tcp -m tcp --dport 80 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i br-d1b132d8c6bd ! -o br-d1b132d8c6bd -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o br-d1b132d8c6bd -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Wed Feb  5 16:10:14 2020
